# Mandelbrot

./: CMakeLists.txt  vcpkg.json
Mandelbrot/: Application.cpp  Application.hpp  Buffer.hpp  CMakeLists.txt  Color.hpp  Mandelbrot.hpp  Presenter.cpp  Presenter.hpp  main.cpp
examples/: CMakeLists.txt
examples/sandbox/: Application.cpp  CMakeLists.txt
examples/test/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt
src/mandelbrot/: CMakeLists.txt  Mandelbrot.hpp
src/presentation/: CMakeLists.txt  Presenter.hpp
src/utility/: Buffer.hpp  CMakeLists.txt  Color.hpp
